--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -11,7 +11,7 @@ Resources:
       Description: 'Lambda function for CD Demo'
       MemorySize: 128
       Timeout: 30
-      Role: 'arn:aws:iam::726803073979:role/lambda_test_exec'
+      Role: 'arn:aws:iam::726803073979:role/lambda-basic'
       Events:
         getCountryAPI:
           Type: Api
