--- a/CountryManager/CountryManager.csproj
+++ b/CountryManager/CountryManager.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="CountryManager.deps.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
