--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - dotnet tool install -g Amazon.Lambda.Tools
+      - dotnet publish /p:GenerateRuntimeConfigurationFiles=true
       - aws cloudformation package --template-file samTemplate.yaml --s3-bucket zombie-lambda-pipeline --output-template-file outputSamTemplate.yaml
 artifacts:
   type: zip
