--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -5,6 +5,7 @@ Resources:
   CDDemoLambda:
     Type: 'AWS::Serverless::Function'
     Properties:
+      Configuration: Release
       FunctionName: CountryManager
       Handler: CountryManager::CountryManager.Function::Get
       Runtime: dotnetcore2.1
