change funcion name

--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -6,7 +6,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       FunctionName: CountryManager
-      Handler: CountryManager::CountryManager.Function::Get
+      Handler: CountryManager::CountryManager.Functions::Get
       Runtime: dotnetcore2.1
       Description: 'Lambda function for CD Demo'
       MemorySize: 128
